workstation lock and terminal services running.
[2916338] "Edit Base entry" now works for Alias entries as well as for Shortcuts.
[2913440] Copy/Send Email menu items now correctly activated if email field
is set or 'mailto:' used in URL field.
[2912177] Restore 'Add Group' menu item to context menu when clicking
on an entry and allow new group to remain unchanged.
[2818401] AutoType backspace field ('\b') now honoured in both "AutoType" and
"Browse To + AutoType" consistently.
[2431438] When unable to find a previous database via the recently opened databases
on the File menu and the user is given the option to open a different database or
create a new one.
[1751462] After Find Toolbar Advanced dialog is used, the previous Find results
are now reset.
[] Finally fix issues running under pre-XP versions of Windows.
[] Fix issue when changing the displayed columns in List View and then switching
to Tree View.

New Features for 3.20.1
=======================
[2919319] Now able to use PasswordSafe to generator passwords as per user defined
policy from the Manage menu.
[2616175] Allows user to retry finding the original database if not successfully
found the first time.
[] Implemented support for new functions: Undo/Redo of changes to the currently open
database.  These functions are on the Edit menu and can also be configured to be on
the Toolbar.  These are database specific and changes can even be undone after the
database has been saved, although the datbase will need to be resaved to retain the
new state.
[] New Synchronize option (subset of the current Merge fucntion) to allow fields in
of entries 2 databases to be synchronised.  Entries are eligible to be selected for
synchronisation if they have identical Group names, Titles and User names. The
database selected to be synchronised with the current open database is now always in
read-only mode i.e. Synchronisation is uni-directional and only entries in the
currently open database can be modified.
